--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,8 @@
   publish = "."
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
+  NPM_VERSION = "10"
 
 [[redirects]]
   from = "/api/*"
