--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "build": "echo 'No build step required'",
     "dev": "netlify dev"
   },
-  "dependencies": {
-    "@netlify/neon": "^1.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "netlify-cli": "^17.0.0"
   },
